--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.47",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
