--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.2",
     "next": "14.0.4",
+    "next-sitemap": "^4.2.3",
     "progressbar.js": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
