--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.0",
     "dotenv": "^16.3.2",
     "next": "14.0.4",
     "next-sitemap": "^4.2.3",
