--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/third-parties": "^14.1.0",
     "dotenv": "^16.3.2",
     "next": "14.0.4",
+    "next-intl": "^3.5.2",
     "next-sitemap": "^4.2.3",
     "progressbar.js": "^1.1.1",
     "react": "^18",
