--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.2",
     "next": "14.0.4",
     "next-intl": "^3.5.2",
+    "next-pwa": "^5.6.0",
     "next-sitemap": "^4.2.3",
     "progressbar.js": "^1.1.1",
     "react": "^18",
