--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@next/third-parties": "^14.1.0",
+    "axios": "^1.6.7",
     "dotenv": "^16.3.2",
+    "fetch-progress": "^1.3.0",
     "next": "14.0.4",
     "next-intl": "^3.5.2",
     "next-pwa": "^5.6.0",
