--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-loader-spinner": "^6.1.6"
+    "react-loader-spinner": "^6.1.6",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "20.11.0",
