--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 GOOGLE_ANALYTICS_ID= 'G-148JN8F3PN'
 NEXT_PUBLIC_API_SERVER_URl= "https://api.spotifyloader.com"
+NEXT_PUBLIC_ADSENSE_PUBLISHER_ID= "pub-8487155941342821"
