--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "create-ads-txt": "create-ads-txt",
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
@@ -15,6 +16,7 @@
     "dotenv": "^16.3.2",
     "fetch-progress": "^1.3.0",
     "next": "14.0.4",
+    "next-google-adsense": "^1.0.6",
     "next-intl": "^3.5.2",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^4.2.3",
